<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appbar_layout_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_homepage_dashboard_background"
    android:fitsSystemWindows="true"
    tools:context="com.bitcoin.wallet.HomepageActivity">


    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:collapsedTitleTextAppearance="@style/toolbarTheme"
        app:contentScrim="@color/colorPrimaryDark"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">


        <include
            layout="@layout/layout_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/_6sdp"
            app:layout_collapseMode="parallax" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/custom_toolbar_simple"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_realtive_layout">

                <TextView
                    android:id="@+id/toolbar_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/txt_app_name"
                    android:textColor="@color/texts_color"
                    android:textSize="@dimen/_16sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/menu_btn_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_exit_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_14sdp"
                    android:src="@drawable/logout"
                    android:tint="@color/white" />


            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:minHeight="?actionBarSize"
        app:tabBackground="@android:color/transparent"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/milky"
        app:tabIndicatorHeight="@dimen/_4sdp"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/TabTextStyle"
        app:tabTextColor="@color/texts_color">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_my_wallet" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_transaction" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_exchange" />


    </com.google.android.material.tabs.TabLayout>

</com.google.android.material.appbar.AppBarLayout>