<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_exchange_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_2sdp"
    android:background="@drawable/shape_exchange_dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp">

    <include
        layout="@layout/layout_loading"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_18sdp">


        <TextView
            android:id="@+id/relative_tv_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/txt_btn_export"
            android:textColor="@color/texts_color"
            android:textSize="@dimen/_23sdp" />

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relative_export_wallet_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:hint="@string/txt_wallet_address"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
        app:boxCornerRadiusBottomStart="@dimen/_4sdp"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:boxStrokeColor="@color/light_green"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/hintTextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_dialog_edit_text_export_wallet_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:focusable="false"
            android:gravity="start|center"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            tools:text="dsfsdfndsnfsdnfkndsklfmlkdsmfldfmkdslmfldsmlf"
            android:textCursorDrawable="@drawable/cursor_color_edittext"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_dialog_import_wallet_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_weight="2"
            android:background="@drawable/selector_btn_login"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/fragment_dialog_import_wallet_btn_dismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@drawable/selector_green_border_white_back"
            android:gravity="center"
            android:text="@string/txt_dismiss"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_forget_pass_btn_submit" />


    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/_104sdp"
        android:layout_height="@dimen/_104sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="data.json"
        app:lottie_loop="true" />


</LinearLayout>