<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_exchange_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_2sdp"
    android:background="@drawable/shape_exchange_dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    >
    <include
        layout="@layout/layout_loading"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_18sdp">

        <ImageView
            android:id="@+id/relative_imgv_bitcoin"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/bitcoin" />

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relative_input_wallet_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:hint="@string/txt_wallet_address"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
        app:boxCornerRadiusBottomStart="@dimen/_4sdp"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:boxStrokeColor="@color/light_green"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/hintTextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_dialog_exchange_input_wallet_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:maxLength="120"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color_edittext"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relative_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:hint="@string/txt_amount"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
        app:boxCornerRadiusBottomStart="@dimen/_4sdp"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:boxStrokeColor="@color/light_green"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/hintTextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_dialog_exchange_input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="50"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color_edittext"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragment_dialog_exchange_btn_confirm"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_login"
                android:text="@string/txt_confirm"
                android:textAllCaps="false"
                android:layout_marginRight="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
            <Button
                android:layout_weight="1.2"
                android:id="@+id/fragment_dialog_exchange_btn_dismiss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_green_border_white_back"
                android:gravity="center"
                android:text="@string/txt_dismiss"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_forget_pass_btn_submit"
                />



        </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="sharecoin.json"
        app:lottie_loop="true" />


</LinearLayout>